2010-01-02 Bogdan Cristea  <cristeab@users.sourceforge.net>

        * itpp/base/itcompat.h: Fixes bug report #2924984

2010-01-02  Adam Piatyszek  <ediap@users.sourceforge.net>

	* NEWS: Prepare release notes for the new stable release

	* NEWS, NEWS-4.0: Move 4.0.x release notes to a separate file

	* configure.ac.in: Update bugs reporting link

	* configure.ac.in, itpp-config.1.in, extras/*, itpp/**/*.cpp,
	itpp/**/*.h, tests/*.cpp: Update copyright dates to `1995-2010'

2009-12-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/index.doc.in: Update links

	* AUTHORS, doc/local/authors.doc: Update the list of developers

-------------------------------------------------------------------------------

2009-12-27  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 4.0.7 release (SVN tag: release-4-0-7)

	* NEWS, VERSION: Add release notes and update version number for
	IT++ 4.0.7 release.

	* configure.ac.in: Do not enable any optimization for the debug
	build

2009-12-26  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/fastica_test.cpp: Suppress a warning message of GCC 4.4

	* itpp/base/vec.cpp, itpp/base/vec.h, tests/vec_test.cpp,
	tests/vec_test.ref: Support equality "==" and inequality "!="
	operators for cvec type.

	This patch fixes bug report #2909998.

2009-12-12  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/llr.h, itpp/comm/turbo.h, itpp/comm/ldpc.h,
	itpp/comm/modulator_nd.h: Improved documentation on the accuracy
	of LLR calculations.

2009-10-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/array.h: Pass by reference, not by value

2009-09-29  Adam Piatyszek  <ediap@users.sourceforge.net>

	* m4/acx_blas.m4: Add support for detecting MKL 10.2 libraries
	using GCC

2009-08-06  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac.in, doc/local/documentation.doc, extras/*,
	itpp-config.1.in, itpp/**/*.cpp, itpp/**/*.h, tests/*.cpp:
	Copyright dates updated to `1995-2009'
